# TraderMoggy

./: .env.example  .gitignore  CLAUDE.md  LICENSE  SPEC.md  pyproject.toml
moggy/: cli.py  config.py
moggy/data/: __init__.py  market.py
tasks/: plan.md  todo.md
tests/: conftest.py
tests/unit/: test_cli.py  test_market.py
